--- a/style.css
+++ b/style.css
@@ -2,16 +2,23 @@ body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
-/* Navigation Bar
+
+/* CSS Variables */
+:root{
+    --navbar-height: 59px;
+}
+
+/* Navigation Bar */
 #navbar{
     display: flex;
-    align-items:center;
+    align-items: center;
     position: sticky;
     top: 0px;
 }
+
 #navbar::before{
     content: "";
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(240, 209, 209);
     position: absolute;
     top:0px;
     left:0px;
@@ -23,9 +30,8 @@ body {
 
 /* Navigation Bar: List Styling */
 
-/* #navbar ul{
+#navbar ul{
     display: flex;
-    font-family: 'Poppins', sans-serif;
 }
 
 #navbar ul li{ 
@@ -34,17 +40,18 @@ body {
 }
 
 #navbar ul li a{
-    color: orange;
+    color: white;
     display: block;
-    padding: 5px 20px;
-    border-radius: 15px;
+    padding: 3px 22px;
+    border-radius: 20px;
     text-decoration: none;
 }
 
 #navbar ul li a:hover{
     color: black;
     background-color: white;
-} */ */
+}
+
 h1 {
     font-size: 50px;
 }
@@ -84,6 +91,14 @@ section{
     background-repeat: no-repeat;
     background-position: right;
 }
+
+.exp{
+    text-align: center;
+    font-size: 40px;
+    color: purple;
+    font-style: oblique;
+}
+
 .single-experience{
     box-shadow: 10px 10px 40px gray;
     border-radius: 5px;
@@ -105,8 +120,9 @@ section{
     border-image: linear-gradient(180deg, blue, cyan);
     border-image-slice: 1;
 }
-footer{
+.end{
+    text-decoration: none;
     text-align: center;
-    font-size: 30px;
-    color: #910d3b;
+    font-size: 25px;
+    color: purple;
 }
